# aiml-fw-athp-sdk-feature-store

./: .gitreview  INFO.yaml  README.md  groups  project.config  pyproject.toml  setup.py  tox.ini
.github/workflows/: gerrit-merge.yaml  gerrit-novote-merge.yaml  gerrit-publish-test.yaml  gerrit-publish.yaml  gerrit-verify.yaml
config/: config.json
docs/: conf.yaml  index.rst  overview.rst  release-notes.rst
featurestoresdk/: __init__.py  feature_store_sdk.py  sdk_exception.py  singleton_manager.py
featurestoresdk/config/: config.json
releases/: pypi-release-aiml_fw_athp_sdk_feature_store.yaml
test/: __init__.py  requirements_testing.txt  test_feature_store_sdk.py
test/config/: config.json
