# ==================================================================================
#
#       Copyright (c) 2025 Samsung Electronics Co., Ltd. All Rights Reserved.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#          http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#
# ==================================================================================

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "featurestoresdk"
version = "0.3.2"
description = "feature store SDK for Training Host"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "O-RAN Software Community", email = "discuss@lists.o-ran-sc.org"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==1.4.4",
    "cassandra-driver==3.25.0",
    "kubernetes",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "mock",
]

[project.urls]
Homepage = "https://gerrit.o-ran-sc.org/r/admin/repos/aiml-fw/athp/sdk/feature-store,general"
Repository = "https://gerrit.o-ran-sc.org/r/admin/repos/aiml-fw/athp/sdk/feature-store,general"

[tool.setuptools.packages.find]
include = ["featurestoresdk*"]

[tool.setuptools.package-data]
featurestoresdk = ["config/config.json"]

[tool.setuptools]
license-files = ["LICENSES.txt"]
